# halestorm

./: Cargo.toml  phase1_implementation_plan.md  rpg_design_document.md
.github/workflows/: ci.yml
assets/maps/: test_map.tmj
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/client/src/plugins/: animation.rs  camera.rs  entities.rs  game.rs  input.rs  mod.rs  player.rs  rendering.rs
crates/client/src/plugins/ui/: character_create.rs  character_select.rs  hud.rs  login.rs  mod.rs  text_input.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  local_transport.rs  local_transport_plugin.rs  map.rs  map_loader.rs  monster.rs  movement.rs  protocol.rs  transport.rs  types.rs
crates/common/tests/: map_test.rs  protocol_serde.rs  transport_test.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/plugins/: game.rs  mod.rs  monsters.rs  persistence.rs  world.rs
